tests/sumo/extended/vaporizer/errors/begin_negative/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: A vaporization begin time is negative (edge id='middle').
Quitting (on error).
